# GKL

./: CMakeLists.txt
src/main/java/com/intel/gkl/: IntelGKLUtils.java
src/main/java/com/intel/gkl/compression/: IntelDeflater.java  IntelDeflaterFactory.java  IntelInflater.java  IntelInflaterFactory.java
src/main/java/com/intel/gkl/pairhmm/: IntelPairHmm.java
src/main/java/com/intel/gkl/smithwaterman/: IntelSmithWaterman.java
src/main/native/common/: neon.h
src/main/native/pairhmm/: CMakeLists.txt  IntelPairHmm.cc  debug.h  define-neon-double.h  define-neon-float.h  neon-pairhmm.h  neon_impl.cc  pairhmm-template-kernel.cc  pairhmm_common.h  shift_template.c  template.h  unit_test.cc  unit_test.h
src/main/native/utils/: CMakeLists.txt  utils.cc  utils.h
src/test/java/com/intel/gkl/: IntelGKLUtilsUnitTest.java
